--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-react": "^6.24.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-router-dom": "^4.2.2",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
